--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
     <header class="page-header page-header--index">
@@ -177,6 +177,6 @@
       </p>
     </footer>
 
-    <script src="js/search-hotel.js"></script>
+    <script src="js/search-hotel.min.js"></script>
   </body>
 </html>
