правки по замечаниям после проверки

--- a/index.html
+++ b/index.html
@@ -75,21 +75,21 @@
           </li>
 
           <li class="features__item more">
-              <h3 class="features__subheader">Небольшая площадь</h3>
-              <span class="features__number">№3</span>
-              <p class="features__description">Все достопримечательности находяться очень близко</p>
+              <h3 class="more__subheader">Небольшая площадь</h3>
+              <span class="more__number">№3</span>
+              <p class="more__description">Все достопримечательности находяться очень близко</p>
           </li>
 
           <li class="features__item more">
-            <h3 class="features__subheader">Красивая дорога</h3>
-            <span class="features__number">№4</span>
-            <p class="features__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            <h3 class="more__subheader">Красивая дорога</h3>
+            <span class="more__number">№4</span>
+            <p class="more__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
 
           <li class="features__item more">
-            <h3 class="features__subheader">Мало туристов</h3>
-            <span class="features__number">№5</span>
-            <p class="features__description">Большинство едет в Гранд Каньон и&nbsp;толпиться там</p>
+            <h3 class="more__subheader">Мало туристов</h3>
+            <span class="more__number">№5</span>
+            <p class="more__description">Большинство едет в Гранд Каньон и&nbsp;толпиться там</p>
           </li>
         </ul>
       </section>
